--- a/assignment1ex1.ipynb
+++ b/assignment1ex1.ipynb
@@ -35,10 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello_1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello_1\")"
+   ]
   }
  ],
  "metadata": {
