--- a/assignment1ex1.ipynb
+++ b/assignment1ex1.ipynb
@@ -9,46 +9,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting numpy\n",
+      "  Downloading numpy-2.2.2-cp311-cp311-win_amd64.whl (12.9 MB)\n",
+      "     ---------------------------------------- 12.9/12.9 MB 5.8 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.2.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 25.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1, 10):\n",
-    "    print(i)"
+    "pip install numpy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the initial parameters:\n",
+    "(c=1 and is therefore ignored in further computions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = 1\n",
+    "N = 200\n",
+    "delta_x = 1/200\n",
+    "delta_t = 0.001\n",
+    "T = 1\n",
+    "discr_x = np.linspace(0, 1, N+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use that u'(x, t = 0) = 0 for the following three subquestions\n",
+    "First, we solve B_i, that is: u(x, t = 0) = sin(2πx):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = np.full((N+1, 1000+1), np.nan)\n",
+    "u[:,0] = np.sin(2*np.pi*discr_x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to implement the algorithm suggested in A, we first need to fill the second column in u."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello_1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(-2.4492935982947064e-16)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "print(\"Hello_1\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
